--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <mat-card>
     <mat-card-title>Login</mat-card-title>
     <mat-card-content>
-        <form [formGroup]="form" (ngSubmit)="submit()">
+        <form [formGroup]="form">
             <p>
                 <mat-form-field>
                     <input type="text" matInput placeholder="Username" formControlName="username">
@@ -28,7 +28,7 @@
             </p>
 
             <div class="button">
-                <button type="submit" mat-button color="primary">Login</button>
+                <button type="submit" mat-button color="primary" (click)="submit()">Login</button>
             </div>
 
         </form>
