--- a/frontend/src/app/countries-represent/countries-represent.component.html
+++ b/frontend/src/app/countries-represent/countries-represent.component.html
@@ -48,35 +48,38 @@
     <h5>Countries</h5>
     <div class="row">
         <div class="col-12">
-            <table class="table table-bordered">
-                <thead>
-                    <tr>
-                        <th scope="col">Country</th>
-                        <th scope="col">Flag</th>
-                        <th scope="col">Number of Athletes</th>
-
-                    </tr>
-                </thead>
-                <tbody>
-
-                    <tr *ngFor='let c of countries'>
-                        <td>
-                            {{c.countryName}}
-
-                        </td>
-                        <td>
-                            <img src="/assets/{{c.flagImage}}" class="img-thumbnail" style="width: 80px; height: 50px" alt="">
-                        </td>
-                        <td>
-        
-                            {{c.numberOfAthletes}}
-                        </td>
-                        
-
-                    </tr>
-
-                </tbody>
-            </table>
+            <div class="span3">
+                <table class="table table-bordered">
+                    <thead>
+                        <tr>
+                            <th scope="col">Country</th>
+                            <th scope="col">Flag</th>
+                            <th scope="col">Number of Athletes</th>
+    
+                        </tr>
+                    </thead>
+                    <tbody>
+    
+                        <tr *ngFor='let c of countries'>
+                            <td>
+                                {{c.countryName}}
+    
+                            </td>
+                            <td>
+                                <img src="/assets/{{c.flagImage}}" class="img-thumbnail" style="width: 80px; height: 50px" alt="">
+                            </td>
+                            <td>
+            
+                                {{c.numberOfAthletes}}
+                            </td>
+                            
+    
+                        </tr>
+    
+                    </tbody>
+                </table>
+            </div>
+           
         </div>
     </div>
 </div>
