--- a/frontend/src/app/organizer/organizer.component.html
+++ b/frontend/src/app/organizer/organizer.component.html
@@ -123,11 +123,12 @@
 
 
     <br>
-
+    
     <div class="container">
         <h5>Disciplines</h5>
         <div class="row">
             <div class="col-12">
+                <div class="span3">
                 <table class="table table-bordered">
                     <thead>
                         <tr>
@@ -158,6 +159,7 @@
 
                     </tbody>
                 </table>
+                </div>
             </div>
         </div>
     </div>
