--- a/frontend/src/app/national-delegation/national-delegation.component.css
+++ b/frontend/src/app/national-delegation/national-delegation.component.css
@@ -13,3 +13,12 @@
 {
     margin: 0px 10px 0px 10px;
 }
+
+.span3 {  
+  height: 400px !important;
+  overflow: scroll;
+}
+
+mat-form-field {
+  margin-right: 12px;
+}
