--- a/frontend/src/app/national-delegation/national-delegation.component.html
+++ b/frontend/src/app/national-delegation/national-delegation.component.html
@@ -57,50 +57,62 @@
     <mat-card-title>Add a new Athlete</mat-card-title>
     <mat-card-content>
         <form> 
-
-            <p>
+              <div class="container-fluid">
+                <div class="row">
+                  <div class="col-md-10">
+                    
                 <mat-form-field>
-                    <input type="text" matInput placeholder="Name" [(ngModel)]="name">
-                </mat-form-field>
-            </p>
-
-            <p>
-                <mat-form-field>
-                    <input type="text" matInput placeholder="Surname" [(ngModel)]="surname">
-                </mat-form-field>
-            </p>
-
-            <div>
-                <label>Sex</label>
-                <mat-radio-group [formControl]="typeFormControl">
-                  <mat-radio-button value="man">Man</mat-radio-button>
-                  <mat-radio-button value="woman">Woman</mat-radio-button>
-                 
-                </mat-radio-group>
-              </div>
-       
-
-
-            <mat-form-field appearance="fill">
-                <mat-label>Discipline</mat-label>
-              
-                  <mat-checkbox [(ngModel)]="disciplines" name="discipline">
-                    <mat-optgroup *ngFor="let sport of sports" [label]="sport.sportName"> 
-                      <mat-option *ngFor="let discipline of sport.disciplines" [value]="discipline.discipline.disciplineName">
-                        {{discipline.discipline.disciplineName}}
-                      </mat-option>
-                    </mat-optgroup>
-                   
-                  </mat-checkbox>
-               
+                  <input type="text" matInput placeholder="Name" [(ngModel)]="name" name="name">
+              </mat-form-field>
         
-            </mat-form-field> 
 
-            <!-- <p *ngIf="error" class="error">
+          
+              <mat-form-field>
+                  <input type="text" matInput placeholder="Surname" [(ngModel)]="surname" name="surname">
+              </mat-form-field>
+          
+
+     
+
+       
+            
+              <mat-form-field appearance="fill">
+                <mat-label>Discipline</mat-label>
+                <mat-select [formControl]="disciplineFormControl" multiple>
+                  <mat-optgroup *ngFor="let sport of sports" [label]="sport.sportName"> 
+                    <mat-option *ngFor="let discipline of sport.disciplines" [value]="discipline.discipline.disciplineName">
+                      {{discipline.discipline.disciplineName}}
+                    </mat-option>
+                  </mat-optgroup>
+                </mat-select>
+              </mat-form-field>
+
+        
+                  </div>
+                  <div class="col-md-2">
+                    
+                    <label>Sex</label>
+                    <mat-radio-group [formControl]="typeFormControl">
+                      <mat-radio-button value="man">Man</mat-radio-button>
+                      <mat-radio-button value="woman">Woman</mat-radio-button>
+                     
+                    </mat-radio-group>
+                  </div>
+                </div>
+              </div>
+           
+               
+                
+              
+              
+         
+  
+
+            <p *ngIf="error" class="error">
                 {{ error }}
-            </p> -->
+            </p>
 
-            <button classs="distance-buttons" mat-raised-button aria-label="Example icon-button with share icon"
+            <button classs="distance-buttons" color="primary" mat-raised-button aria-label="Example icon-button with share icon"
             (click)="addAthlete()">
             Add Athlete
         </button>
@@ -113,57 +125,59 @@
 </mat-card>
 
 <br>
-
-<div class="container">
-    <h5>All players</h5>
-    <div class="row">
-      <div class="col-12">
-        <table class="table table-bordered">
-          <thead>
-            <tr>
-              <th scope="col">Name</th>
-              <th scope="col">Surname</th>
-              <th scope="col">Country</th>
-              <th scope="col">Sex</th>
-              <th scope="col">Sport</th>
-              <th scope="col">Disciplines</th>
-              <th scope="col">Medal Winner</th>
-
-            </tr>
-          </thead>
-          <tbody>
-
-            <tr *ngFor='let c of competitors'>
-              <td>
-                {{c.name}}
-
-              </td>
-              <td>
-                {{c.surname}}
-              </td>
-              <td>
-                {{c.country.countryName}}
-              </td>
-              <td>
-                {{c.sex}}
-              </td>
-              <td>
-                {{c.competesIn[0].sportName}}
-              </td>
-              <td>
-                <div *ngFor='let d of c.competesIn'>
-                  {{d.disciplineName}}
-                </div>
-              </td>
-              <td>
-                {{c.medalWinner}}
-              </td>
-
-
-            </tr>
-
-          </tbody>
-        </table>
+<div class="span3">
+  
+  <div class="container">
+      <h5>All players</h5>
+      <div class="row">
+        <div class="col-12">
+          <table class="table table-bordered">
+            <thead>
+              <tr>
+                <th scope="col">Name</th>
+                <th scope="col">Surname</th>
+                <th scope="col">Country</th>
+                <th scope="col">Sex</th>
+                <th scope="col">Sport</th>
+                <th scope="col">Disciplines</th>
+                <th scope="col">Medal Winner</th>
+  
+              </tr>
+            </thead>
+            <tbody>
+  
+              <tr *ngFor='let c of competitors'>
+                <td>
+                  {{c.name}}
+  
+                </td>
+                <td>
+                  {{c.surname}}
+                </td>
+                <td>
+                  {{c.country.countryName}}
+                </td>
+                <td>
+                  {{c.sex}}
+                </td>
+                <td>
+                  {{c.competesIn[0].sportName}}
+                </td>
+                <td>
+                  <div *ngFor='let d of c.competesIn'>
+                    {{d.disciplineName}}
+                  </div>
+                </td>
+                <td>
+                  {{c.medalWinner}}
+                </td>
+  
+  
+              </tr>
+  
+            </tbody>
+          </table>
+        </div>
       </div>
     </div>
-  </div>
+</div>
