--- a/frontend/src/app/national-delegation/national-delegation.component.html
+++ b/frontend/src/app/national-delegation/national-delegation.component.html
@@ -41,7 +41,7 @@
     </button>
 
     <button classs="distance-buttons" mat-raised-button aria-label="Example icon-button with share icon"
-      (click)="home()">
+      (click)="back()">
       Back
     </button>
   </div>
@@ -51,9 +51,8 @@
 
 
 
-<br>
-
 <mat-card>
+  <h5>National Delegation page</h5>
   <mat-card-title>Add a new Athlete</mat-card-title>
   <mat-card-content>
     <form>
