--- a/frontend/src/app/add-team/add-team.component.html
+++ b/frontend/src/app/add-team/add-team.component.html
@@ -1,115 +1,120 @@
 <mat-toolbar color="primary">
 
 
-    <button mat-button [matMenuTriggerFor]="menu">Menu</button>
-    <mat-menu #menu="matMenu">
-  
-  
-      <div>
-        <button mat-menu-item color="primary" (click)="overviewSports()">Overview sports</button> 
-      </div>
-  
-      <div>
-        <button mat-menu-item color="primary" (click)="overviewAthletesBySport()">Overview Athletes by sport</button>
-      </div>
-  
-      <div>
-        <button mat-menu-item color="primary" (click)="nationalDelegate()">Add new Athletes</button>
-      </div>
-  
-  
-      <div>
-        <button mat-menu-item color="primary" (click)="home()">Home </button>
-      </div>
-  
-  
-  
-  
-  
-    </mat-menu>
-    <span class="example-spacer"></span>
-  
-  
-  
-  
-    <div class="buttons-row">
-  
-  
-      <button classs="distance-buttons" mat-raised-button aria-label="Example icon-button with share icon"
-        (click)="changePassword()">
-        Change password
-      </button>
-  
-      <button classs="distance-buttons" mat-raised-button aria-label="Example icon-button with share icon"
-        (click)="home()">
-        Back
-      </button>
+  <button mat-button [matMenuTriggerFor]="menu">Menu</button>
+  <mat-menu #menu="matMenu">
+
+
+    <div>
+      <button mat-menu-item color="primary" (click)="overviewSports()">Overview sports</button>
     </div>
-  
-  
-  </mat-toolbar>
-  
-  
 
-  <mat-card>
-    <mat-card-title>Add a new Athlete</mat-card-title>
-    <mat-card-content>
-      <form>
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col-md-12">
-  
-                <mat-form-field appearance="fill">
-                    <mat-label>Discipline</mat-label>
-                    <mat-select [formControl]="disciplineFormControl" >
-                      <mat-optgroup *ngFor="let sport of sports" [label]="sport.sportName">
-                        <mat-option *ngFor="let d of sport.disciplines"
-                          [value]="d.discipline.disciplineName">
-                          {{d.discipline.disciplineName}}
-                        </mat-option>
-                      </mat-optgroup>
-                    </mat-select>
-                  </mat-form-field>
+    <div>
+      <button mat-menu-item color="primary" (click)="overviewAthletesBySport()">Overview Athletes by sport</button>
+    </div>
 
-  
+    <div>
+      <button mat-menu-item color="primary" (click)="nationalDelegate()">Add new Athletes</button>
+    </div>
+
+
+    <div>
+      <button mat-menu-item color="primary" (click)="home()">Home </button>
+    </div>
+
+
+
+
+
+  </mat-menu>
+  <span class="example-spacer"></span>
+
+
+
+
+  <div class="buttons-row">
+
+
+    <button classs="distance-buttons" mat-raised-button aria-label="Example icon-button with share icon"
+      (click)="changePassword()">
+      Change password
+    </button>
+
+    <button classs="distance-buttons" mat-raised-button aria-label="Example icon-button with share icon"
+      (click)="back()">
+      Back
+    </button>
+  </div>
+
+
+</mat-toolbar>
+
+
+
+<mat-card>
+  <mat-card-title>Add a new Athlete</mat-card-title>
+  <mat-card-content>
+    <form>
+      <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-12">
+
+            <mat-form-field appearance="fill">
+              <mat-label>Discipline</mat-label>
+              <mat-select [formControl]="disciplineFormControl">
+                <mat-optgroup *ngFor="let sport of sports" [label]="sport.sportName">
+                  <mat-option *ngFor="let d of sport.disciplines" [value]="d.discipline.disciplineName">
+                    {{d.discipline.disciplineName}}
+                  </mat-option>
+                </mat-optgroup>
+              </mat-select>
+            </mat-form-field>
+
+            <button classs="distance-buttons" color="primary" mat-raised-button
+              aria-label="Example icon-button with share icon" (click)="selectDiscipline()">
+              Select Discipline to add players
+            </button>
+
+            <div *ngIf='disciplineSelected'>
               <mat-form-field appearance="fill">
-                <mat-label>Select players to add to this team</mat-label>
-                <mat-select [formControl]="selectedAthletes" multiple>
-                  
-                    <mat-option *ngFor="let c of competitors"
-                      [value]="c">
-                      {{c.name}} {{c.surname}}
-                    </mat-option>
-                
+                <mat-label>Select players to view/add to this team</mat-label>
+                <mat-select [formControl]="selectedAthletesForm" multiple>
+
+                  <mat-option *ngFor="let c of selectedAthletes" [value]="c">
+                    {{c.name}} {{c.surname}}
+                  </mat-option>
+
                 </mat-select>
               </mat-form-field>
 
-  
-              
-        <p *ngIf="error" class="error">
-          {{ error }}
-        </p>
-  
-        <button classs="distance-buttons" color="primary" mat-raised-button
-          aria-label="Example icon-button with share icon" (click)="addTeam()">
-          Insert Athletes
-        </button>
+
+
+              <p *ngIf="error" class="error">
+                {{ error }}
+              </p>
+
+              <button classs="distance-buttons" color="primary" mat-raised-button
+                aria-label="Example icon-button with share icon" (click)="addTeam()">
+                Insert Athletes
+              </button>
             </div>
-    
+
           </div>
         </div>
-       
- 
-  
-      </form>
-  
-  
-  
-    </mat-card-content>
-  </mat-card>
+
+      </div>
 
 
-<div class="span3">
+
+    </form>
+
+
+
+  </mat-card-content>
+</mat-card>
+
+
+<div class="span3" *ngIf="disciplineSelected">
 
   <div class="container">
     <h5>Players in this team</h5>
