--- a/frontend/src/app/home-page/home-page.component.html
+++ b/frontend/src/app/home-page/home-page.component.html
@@ -1,4 +1,5 @@
 
+
 <mat-toolbar color="primary">
 
 
@@ -6,7 +7,7 @@
   <mat-menu #menu="matMenu">
 
     <div>
-      <button mat-menu-item color="primary" (click)="medalsRepresent()" >Olympic Medal Count  </button>
+      <button mat-menu-item color="primary" (click)="medalsRepresent()">Olympic Medal Count </button>
     </div>
 
 
@@ -18,9 +19,10 @@
 
   </mat-menu>
   <span class="example-spacer"></span>
-  
+
   <div *ngIf="registered">
-    <button class="distance-buttons" mat-raised-button aria-label="Example icon-button with heart icon" (click)="register()">
+    <button class="distance-buttons" mat-raised-button aria-label="Example icon-button with heart icon"
+      (click)="register()">
       Register
     </button>
   </div>
@@ -28,7 +30,8 @@
   <button class="distance-buttons" mat-raised-button aria-label="Example icon-button with share icon" (click)="login()">
     Login
   </button>
-  <button class="distance-buttons" mat-raised-button aria-label="Example icon-button with share icon" (click)="changePassword()">
+  <button class="distance-buttons" mat-raised-button aria-label="Example icon-button with share icon"
+    (click)="changePassword()">
     Change password
   </button>
 
@@ -44,13 +47,13 @@
           <mat-label>Name</mat-label>
           <input matInput [formControl]="nameFormControl" placeholder="Name">
         </mat-form-field>
-  
+
         <mat-form-field appearance="fill">
           <mat-label>Surname</mat-label>
           <input matInput [formControl]="surnameFormControl" placeholder="Surname">
         </mat-form-field>
-  
-         <mat-form-field appearance="fill">
+
+        <mat-form-field appearance="fill">
           <mat-label>Country</mat-label>
           <mat-select [(ngModel)]="countryName" name="country">
             <mat-option *ngFor="let country of countries" [value]="country.countryName">
@@ -58,7 +61,7 @@
             </mat-option>
           </mat-select>
         </mat-form-field>
-  
+
         <mat-form-field appearance="fill">
           <mat-label>Sport</mat-label>
           <mat-select [(ngModel)]="sportName" name="sportName">
@@ -67,21 +70,21 @@
             </mat-option>
           </mat-select>
         </mat-form-field>
-  
-         <mat-form-field appearance="fill">
+
+        <mat-form-field appearance="fill">
           <mat-label>Discipline</mat-label>
-        
-            <mat-select [(ngModel)]="disciplineName" name="discipline">
-              <mat-optgroup *ngFor="let sport of sports" [label]="sport.sportName"> 
-                <mat-option *ngFor="let discipline of sport.disciplines" [value]="discipline.discipline.disciplineName">
-                  {{discipline.discipline.disciplineName}}
-                </mat-option>
-              </mat-optgroup>
-             
-            </mat-select>
-         
-  
-        </mat-form-field> 
+
+          <mat-select [(ngModel)]="disciplineName" name="discipline">
+            <mat-optgroup *ngFor="let sport of sports" [label]="sport.sportName">
+              <mat-option *ngFor="let discipline of sport.disciplines" [value]="discipline.discipline.disciplineName">
+                {{discipline.discipline.disciplineName}}
+              </mat-option>
+            </mat-optgroup>
+
+          </mat-select>
+
+
+        </mat-form-field>
         <div>
           <label>Sex: </label>
           <mat-radio-group [formControl]="floatLabelControl">
@@ -89,7 +92,7 @@
             <mat-radio-button value="woman">Woman</mat-radio-button>
           </mat-radio-group>
         </div>
-  
+
 
         <div>
           <label>Medal winners only? : </label>
@@ -98,33 +101,44 @@
           </mat-radio-group>
         </div>
 
-        <button mat-raised-button color="primary"  (click)="search()" >Search</button>
-       
-  
+        <button mat-raised-button color="primary" (click)="search()">Search</button>
+
+
       </form>
-  
+
     </mat-card-content>
   </mat-card>
 </div>
 
+<div class="container">
+  
+    <div class="d-flex justify-content-between p-2">
+      <mat-paginator
+      [length]="length"
+      [pageSize]="pageSize"
+      [pageSizeOptions]="pageSizeOptions"
+      aria-label="Select page">
+    </mat-paginator>
+    
+  </div>
 
-
-  <div class="container">
-    <h5>Search results</h5>
-    <div class="row">
-      <div class="col-12">
-        <table class="table table-bordered">
+  <h5>Search results</h5>
+  <div class="row">
+    <div class="col-12">
+      <div class="span3">
+        <table id="dtBasicExample" class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
           <thead>
-            <tr>
-              <th scope="col">Name</th>
-              <th scope="col">Surname</th>
-              <th scope="col">Country</th>
-              <th scope="col">Sex</th>
-              <th scope="col">Sport</th>
-              <th scope="col">Disciplines</th>
-              <th scope="col">Medal Winner</th>
+         
+          <tr>
+            <th scope="col">Name</th>
+            <th scope="col">Surname</th>
+            <th scope="col">Country</th>
+            <th scope="col">Sex</th>
+            <th scope="col">Sport</th>
+            <th scope="col">Disciplines</th>
+            <th scope="col">Medal Winner</th>
 
-            </tr>
+          </tr>
           </thead>
           <tbody>
 
@@ -159,6 +173,8 @@
 
           </tbody>
         </table>
+
       </div>
     </div>
   </div>
+</div>
