--- a/frontend/src/app/home-page/home-page.component.css
+++ b/frontend/src/app/home-page/home-page.component.css
@@ -49,6 +49,10 @@
     margin: 0px 2px 0px 2px;
 }
 .span3 {  
-  height: 350px !important;
+  height: 300px !important;
   overflow: scroll;
+}
+
+mat-label{
+  color:navy
 }
